Update gitignore, favicon, gulpfile, db.json, search component style, controller and services

--- a/bower.json
+++ b/bower.json
@@ -21,11 +21,11 @@
     "type": "git",
     "url": "https://github.com/giuseScara/angular-search-country"
   },
-
   "dependencies": {
     "bootstrap": "3.3.7",
     "font-awesome": "4.7.0",
     "angular": "1.6.0",
-    "angular-mocks": "1.6.0"
+    "angular-mocks": "1.6.0",
+    "toastr": "2.1.3"
   }
 }
